Refactor ValidatedUri